# Lyse

./: .gitignore  .gitmodules  CMakeLists.txt  License.md  Lyse.sln  README.md
examples/: main.cpp  screen.frag  screen.vert
examples/assets/shaders/: screen.frag  screen.vert
include/Lyse/: Lyse.hpp  LyseDecl.hpp  LyseTypes.hpp
include/Lyse/Core/: CameraBase.hpp  CameraOrthographic.hpp  CameraPerspective.hpp  Core.hpp  CoreDecl.hpp  CoreTypes.hpp  Drawable.hpp  DrawableGroup.hpp  LightBase.hpp  LightPoint.hpp  LightSpot.hpp  LightSun.hpp  Material.hpp  MaterialBase.hpp  Mesh.hpp  Scene.hpp  SceneDrawable.hpp  ShaderSet.hpp  Transformable.hpp  Vertex.hpp
include/Lyse/Core/templates/: CameraBase.hpp  CameraOrthographic.hpp  CameraPerspective.hpp  LightBase.hpp  LightPoint.hpp  LightSpot.hpp  LightSun.hpp  Mesh.hpp  Transformable.hpp  Vertex.hpp
src/Core/: Drawable.cpp  Scene.cpp
src/Core/Shaders/: merge.frag  mesh_shadowMapping.vert  mesh_transparency.frag  mesh_transparency.vert  shaders.cpp  ssao.frag
src/Lyse/Core/: Drawable.cpp  Material.cpp  Scene.cpp  ShaderSet.cpp
src/Lyse/Core/Shaders/: common.glsl  lighting.glsl  lightingHeader.glsl  main.frag  merge.frag  merge.vert  mesh.frag  mesh.vert  mesh_gBuffer.frag  mesh_gBuffer.vert  mesh_shadowMapping.frag  mesh_shadowMapping.geom  mesh_shadowMapping.vert  mesh_transparency.frag  mesh_transparency.vert  shaders.cpp  ssao.frag  ssao.vert
tools/: shaders_to_c_arrays.py
vs/Lyse/: Lyse.vcxproj  Lyse.vcxproj.filters
vs/LyseExamples/: LyseExamples.vcxproj  LyseExamples.vcxproj.filters
